Fix Jupyter notebook backgrounds having a dark rectangle behind them

--- a/themes/Catppuccin Mocha.css
+++ b/themes/Catppuccin Mocha.css
@@ -62,7 +62,7 @@ body {
 
 .monaco-list.settings-toc-tree .monaco-list-row.selected,
 .monaco-list.settings-toc-tree .monaco-list-row.focused,
-.monaco-list .monaco-list-row.selected,
+.monaco-list.settings-toc-tree .monaco-list-row.selected,
 .monaco-list.settings-toc-tree:not(.drop-target)
   .monaco-list-row:hover:not(.selected):not(.focused) {
   background-color: rgb(69, 71, 90, 0.8) !important;
