--- a/themes/Noir et blanc.css
+++ b/themes/Noir et blanc.css
@@ -46,7 +46,7 @@ body {
 
 .monaco-list.settings-toc-tree .monaco-list-row.selected,
 .monaco-list.settings-toc-tree .monaco-list-row.focused,
-.monaco-list .monaco-list-row.selected,
+.monaco-list.settings-toc-tree .monaco-list-row.selected,
 .monaco-list.settings-toc-tree:not(.drop-target) .monaco-list-row:hover:not(.selected):not(.focused) {
   background-color: rgb(228, 230, 241,0.6) !important;
 }
