--- a/themes/Solarized Dark+.css
+++ b/themes/Solarized Dark+.css
@@ -41,7 +41,7 @@ body {
 
 .monaco-list.settings-toc-tree .monaco-list-row.selected,
 .monaco-list.settings-toc-tree .monaco-list-row.focused,
-.monaco-list .monaco-list-row.selected,
+.monaco-list.settings-toc-tree .monaco-list-row.selected,
 .monaco-list.settings-toc-tree:not(.drop-target) .monaco-list-row:hover:not(.selected):not(.focused) {
   background-color: rgb(0, 43, 54, 0.6) !important;
 }
